syntax = "proto3";
package network.monitoringp.v1;

option go_package = "github.com/ignite/network/x/monitoringp/types";

message ConsumerClientID {
  string client_id = 1;
}
