syntax = "proto3";
package network.types;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ignite/network/pkg/types";

// MonitoringPacketData is the IBC packet for monitoring modules
message MonitoringPacketData {
  oneof packet {
    // this line is used by starport scaffolding # ibc/packet/proto/field
    MonitoringPacket monitoring_packet = 1;
  }
}

// MonitoringPacketAck defines a struct for the packet acknowledgment
message MonitoringPacketAck {}

// MonitoringPacket is the packet sent over IBC that contains all the signature counts
message MonitoringPacket {
  int64 block_height = 1;
  SignatureCounts signature_counts = 2 [(gogoproto.nullable) = false];
}

// SignatureCounts contains information about signature reporting for a number of blocks
message SignatureCounts {
  uint64 block_count = 1;
  repeated SignatureCount counts = 2 [(gogoproto.nullable) = false];
}

// SignatureCount contains information of signature reporting for one specific validator with consensus address
// RelativeSignatures is the sum of all signatures relative to the validator set size
message SignatureCount {
  string op_address = 1;
  string relative_signatures = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (cosmos_proto.scalar) = "cosmos.Dec"
  ];
}
